--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>JS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+    .result {
+      padding-top: 20px;
+    }
+  </style>
 </head>
 <body>
-<script src="./assest/js/script.js"></script>
+<div class="container">
+  <form id="form">
+    <label>Name</label>
+   <input id="first_name">
+  <button id="search" type="button">Search</button>
+  </form>
+  <div class="result" id="result"></div>
+
+</div>
 </body>
+<script src="./assest/js/main.js"></script>
 </html>
+
