Lesson 3 Home Work

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div class="container">
   <form id="form">
     <label>Name</label>
-   <input id="first_name">
-  <button id="search" type="button">Search</button>
+    <input id="first_name">
+    <button id="search" type="submit" onclick="return false;">Search</button>
   </form>
   <div class="result" id="result"></div>
 
@@ -29,4 +29,3 @@
 </body>
 <script src="./assest/js/main.js"></script>
 </html>
-
