--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    .container {
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-    .result {
-      padding-top: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-<div class="container">
-  <form id="form">
-    <label>Name</label>
-    <input id="first_name">
-    <button id="search" type="submit" onclick="return false;">Search</button>
-  </form>
-  <div class="result" id="result"></div>
+<p id="text1">Text 1</p>
+<p id="text2">Text 2</p>
+<p id="text3">Text 3</p>
 
-</div>
 </body>
 <script src="./assest/js/main.js"></script>
 </html>
